# database-replicator

./: .discord-notify.sh  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PR_BODY.md  README-AWSRDS.md  README-MongoDB.md  README-MySQL.md  README-PostgreSQL.md  README-SQLite.md  README.md
.cargo/: audit.toml
.github/workflows/: build-windows.yml  ci.yml  release.yml
aws/: .ami_id  .api_endpoint  deploy.sh  update-lambda.sh
aws/ec2/: build-ami.sh  setup-worker.sh  worker.sh
aws/lambda/: README.md  cleanup.py  handler.py
aws/terraform/: main.tf  tfplan
docs/: 20251205_APIKEY_Upgrade_Brainstorm.md  20251208_Replication_Sync_Proposal_Accelerated.md  20251208_ShowHN_Publisher_Subscriber_PostgreSQL_Replication_with_Xmin.md  20251208_xmin_sync_review.md  blog-post-show-hn.md  cicd.md  integration-testing.md  performance-report.md  publishing.md  replication-config.md  security-audit-report.md
docs/plans/: 20251106_selective_replication_implementation.md  20251109_schema_aware_filters.md
docs/releases/: v5.2.3.md
scripts/: create_perf_dbs.sh  generate-release-notes.sh  test-sqlite-delta.sh
sqlite-watcher/: Cargo.toml  README.md  build.rs
sqlite-watcher-docs/: README-SQLite.md  installers.md
sqlite-watcher/proto/: watcher.proto
sqlite-watcher/src/: change.rs  decoder.rs  lib.rs  main.rs  queue.rs  server.rs  wal.rs
sqlite-watcher/tests/: queue_tests.rs  server_tests.rs  wal_watch_tests.rs
src/: daemon.rs  filters.rs  interactive.rs  lib.rs  main.rs  preflight.rs  state.rs  utils.rs
src/commands/: init.rs  mod.rs  status.rs  sync.rs  sync_sqlite.rs  target.rs  validate.rs  verify.rs
src/jsonb/: mod.rs  writer.rs
src/migration/: dump.rs  estimation.rs  filtered.rs  mod.rs  restore.rs  schema.rs
src/mongodb/: converter.rs  mod.rs  reader.rs
src/mysql/: converter.rs  mod.rs  reader.rs
src/postgres/: connection.rs  mod.rs  privileges.rs
src/remote/: client.rs  models.rs
src/replication/: monitor.rs  publication.rs  subscription.rs
src/serendb/: client.rs  mod.rs  picker.rs  target.rs
src/sqlite/: converter.rs  mod.rs  reader.rs
src/xmin/: daemon.rs  mod.rs  reader.rs  reconciler.rs  state.rs  writer.rs
tests/: fallback_test.rs  integration_remote_test.rs  integration_test.rs  interactive_serendb_test.rs  mysql_integration_test.rs  performance_test.rs  security_test.rs  serendb_api_test.rs  sqlite_integration_test.rs  state_test.rs  xmin_integration_test.rs
