[package]
name = "sqlite-watcher"
version = "0.1.0"
edition = "2021"
authors = ["SerenAI <eng@serendb.com>"]
description = "SQLite WAL tailer that streams change events to database-replicator."
license = "Apache-2.0"
repository = "https://github.com/serenorg/database-replicator"
readme = "README.md"
build = "build.rs"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dirs = "5.0"
base64 = "0.21"
prost = "0.12"
rusqlite = "0.30"
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tonic = { version = "0.11", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.35", features = ["rt", "macros"] }
tower = "0.4"
