[package]
name = "sqlite-watcher"
version = "0.1.0"
edition = "2021"
authors = ["SerenAI <eng@serendb.com>"]
description = "Utilities for monitoring SQLite databases (queue module)."
license = "Apache-2.0"
repository = "https://github.com/serenorg/database-replicator"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
rusqlite = { version = "0.30", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
