[package]
name = "sqlite-watcher"
version = "0.1.0"
edition = "2021"
authors = ["SerenAI <eng@serendb.com>"]
description = "SQLite watcher components (queue + gRPC)."
license = "Apache-2.0"
repository = "https://github.com/serenorg/database-replicator"
build = "build.rs"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dirs = "5.0"
rusqlite = { version = "0.30", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.21"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tonic = { version = "0.11", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.12"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.35", features = ["rt", "macros"] }
tonic = { version = "0.11", features = ["transport"] }
tower = "0.4"
